# mysql-tutorial

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  LICENSE  README.md  setup-repo.sh
uuidv/: CMakeLists.txt  README.md  uuid_gen.h
uuidv/component/: CMakeLists.txt  component_uuidv.cc
uuidv/plugin/: CMakeLists.txt  uuidv_plugin.cc
uuidv/test/: test_uuidv.sql
uuidv/udf/: CMakeLists.txt  uuidv_udf.cc
